Fix input box padding on small screens

--- a/csfieldguide/static/interactives/mips-assembler/css/mips-assembler.scss
+++ b/csfieldguide/static/interactives/mips-assembler/css/mips-assembler.scss
@@ -67,4 +67,5 @@ details[open] {
 }
 .textarea-padding {
   padding-left: 15px;
+  padding-right: 15px;
 }
