--- a/csfieldguide/static/interactives/mips-simulator/css/mips-simulator.scss
+++ b/csfieldguide/static/interactives/mips-simulator/css/mips-simulator.scss
@@ -54,4 +54,5 @@ textarea.code {
 }
 .textarea-padding {
   padding-left: 15px;
+  padding-right: 15px;
 }
